// protoc --go_out=. --go-grpc_out=. user.proto
syntax = "proto3";

option go_package =  "./pb";

package proto;

service UserService {
  rpc GetById(GetByIdReq) returns (GetByIdResp);
}

message GetByIdReq {
  uint64 id =1;
}

message GetByIdResp {
  User user = 1;
}

message User {
  uint64 id = 1;
  uint32 status = 2;
}

